# NshCalc

./: CMakeLists.txt  README.md  download.cpp  nshcalc.cpp  nshcalc.h  settings.json
.github/workflows/: github_actions.yml
.qt/: QtDeploySupport.cmake
src/: download.h  main.cpp  nshcalc.cpp  nshcalc.h  update.cpp  update.h
